Compiler/tests/typing/bad/testfile-compare-3.rs

fn foo() {}
fn main() { 1 < foo(); }
